[tool.poetry]
name = "learningtracker"
version = "0.1.0"
description = ""
authors = ["MalarzDawid <github@dawidmalarz.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pytube = "^15.0.0"
rich = "^13.5.3"
pydantic = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
